; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/img4/extr_interface.c_img4_interface_register.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/img4/extr_interface.c_img4_interface_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@img4if = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [27 x i8] c"img4 interface already set\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @img4_interface_register(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** @img4if, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = call i32 @panic(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %7

7:                                                ; preds = %5, %1
  %8 = load i32*, i32** %2, align 8
  store i32* %8, i32** @img4if, align 8
  ret void
}

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
